--- a/backend/auth-microservice/src/main/resources/application.properties
+++ b/backend/auth-microservice/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port = 8082
+spring.application.name = auth-microservice
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8888/eureka
