--- a/backend/nestjs microservices/job-request-microservice/package.json
+++ b/backend/nestjs microservices/job-request-microservice/package.json
@@ -23,7 +23,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "eureka-js-client": "^4.5.0",
+    "mongoose": "^7.1.1",
+    "nestjs-eureka": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
