--- a/backend/springboot microservices/payment-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/payment-microservice/src/main/resources/application.properties
@@ -5,14 +5,10 @@ eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 spring.application.name=payment-microservice
 
 #configure database
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:bddsiw
-spring.datasource.username=system
-spring.datasource.password=siw2023
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
-
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 springdoc.api-docs.path=/api-docs
