--- a/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
@@ -5,11 +5,10 @@ eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 spring.application.name=interaction-microservice
 
 #configure database
-spring.datasource.url=jdbc:mysql://localhost:3306/ms-interaction
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 springdoc.api-docs.path=/api-docs
