--- a/backend/springboot microservices/api-gateway/src/main/resources/application.yml
+++ b/backend/springboot microservices/api-gateway/src/main/resources/application.yml
@@ -24,3 +24,10 @@ spring:
           filters:
             - RewritePath=auth/(?<s>.*), /${s}
 
+        - id: job-request-microservice
+          uri: lb://job-request-service
+          predicates:
+            - Path=/job-request/**
+          filters:
+            - RewritePath=auth/(?<s>.*), /${s}
+
