--- a/backend/springboot microservices/auth-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/auth-microservice/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name = auth-microservice
 spring.datasource.url = jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8888/eureka
