--- a/backend/springboot microservices/auth-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/auth-microservice/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port = 8082
 spring.application.name = auth-microservice
-spring.datasource.url = jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.username=sa
+spring.datasource.password=123456
 #spring.jpa.hibernate.ddl-auto=create-drop
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
