--- a/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
@@ -9,9 +9,13 @@ spring.application.name=interaction-microservice
 #spring.datasource.username=root
 #spring.datasource.password=
 #spring.jpa.show-sql=true
-spring.datasource.url = jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.h2.console.settings.web-allow-others=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
