--- a/backend/springboot microservices/company-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/company-microservice/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=company_db
+spring.jpa.hibernate.ddl-auto=create-drop
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8888/eureka
