many updates lazy to write a commit name (almost debuging)

--- a/backend/springboot microservices/api-gateway/src/main/resources/application.yml
+++ b/backend/springboot microservices/api-gateway/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
           predicates:
             - Path=/auth/**
           filters:
+            - AuthorizationFilter
             - RewritePath=auth/(?<s>.*), /${s}
 
         - id: storage-microservice
