--- a/backend/springboot microservices/api-gateway/src/main/resources/application.yml
+++ b/backend/springboot microservices/api-gateway/src/main/resources/application.yml
@@ -7,15 +7,17 @@ spring:
           predicates:
             - Path=/workers/**
           filters:
-            - RewritePath=/workers/(?<segment>.*), /${segment}
             - AuthorizationFilter
-        - id: client
+            - RewritePath=workers/(?<segment>.*), /${segment}
+
+        - id: client3
           uri: lb://company-microservice
           predicates:
             - Path=/clients/**
           filters:
-            - RewritePath=/clients/(?<segment>.*), /${segment}
             - AuthorizationFilter
+            - RewritePath=/clients/(?<segment>.*), /${segment}
+
 
         - id: auth-microservice
           uri: lb://auth-microservice
@@ -29,7 +31,7 @@ spring:
           predicates:
             - Path=/storage/**
           filters:
-            - RewritePath=auth/(?<s>.*), /${s}
+            - RewritePath=storage/(?<s>.*), /${s}
 
         - id: job-request-microservice
           uri: lb://job-request-service
@@ -37,4 +39,3 @@ spring:
             - Path=/job-request/**
           filters:
             - RewritePath=auth/(?<s>.*), /${s}
-
