--- a/backend/springboot microservices/auth-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/auth-microservice/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port = 8082
 spring.application.name = auth-microservice
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.settings.web-allow-others=true
-spring.datasource.username=sa
-spring.datasource.password=123456
-#spring.jpa.hibernate.ddl-auto=create-drop
+# mysql connection
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:9511/auth
+spring.datasource.username=root
+spring.datasource.password=local
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
+###
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8888/eureka
