--- a/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
@@ -5,18 +5,12 @@ eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 spring.application.name=interaction-microservice
 
 #configure database
-#spring.datasource.url=jdbc:mysql://localhost:3306/ms-interaction
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=123456
-spring.h2.console.settings.web-allow-others=true
-
-spring.jpa.hibernate.ddl-auto=create-drop
+# mysql connection
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:9511/interactions
+spring.datasource.username=root
+spring.datasource.password=local
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
 
 springdoc.api-docs.path=/api-docs
