--- a/backend/springboot microservices/payment-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/payment-microservice/src/main/resources/application.properties
@@ -4,11 +4,13 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 spring.application.name=payment-microservice
 
-#configure database
-spring.datasource.url = jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+# mysql connection
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:9511/payement
+spring.datasource.username=root
+spring.datasource.password=local
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
 
-#spring.jpa.hibernate.ddl-auto=create-drop
 
 springdoc.api-docs.path=/api-docs
