--- a/backend/third party services/mysql/docker-compose.yml
+++ b/backend/third party services/mysql/docker-compose.yml
@@ -13,3 +13,7 @@ services:
           - ./docker/provision/mysql/init:/docker-entrypoint-initdb.d
         environment:
           MYSQL_ROOT_PASSWORD: local
+        ports:
+          - '9511:3306'
+        expose:
+          - '9511'
