add_card_endPoInT

--- a/backend/springboot microservices/api-gateway/src/main/resources/application.yml
+++ b/backend/springboot microservices/api-gateway/src/main/resources/application.yml
@@ -35,4 +35,9 @@ spring:
             - Path=/job-request/**
           filters:
             - AuthorizationFilter
-
+        - id: chat-microservice
+          uri: lb://chat-microservice
+          predicates:
+            - Path=/chat/**
+          filters:
+            - AuthorizationFilter
