testiing , refactoring carts

--- a/backend/springboot microservices/api-gateway/src/main/resources/application.yml
+++ b/backend/springboot microservices/api-gateway/src/main/resources/application.yml
@@ -36,3 +36,9 @@ spring:
           filters:
             - AuthorizationFilter
 
+        - id: interactions-route
+          uri: lb://interaction-microservice
+          predicates:
+            - Path=/interactions/**
+          filters:
+            - AuthorizationFilter
