--- a/backend/springboot microservices/storage-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/storage-microservice/src/main/resources/application.properties
@@ -4,13 +4,14 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 spring.application.name=storage-microservice
 
-#configure database
-spring.datasource.url = jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-
+# mysql connection
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:9511/storage
+spring.datasource.username=root
+spring.datasource.password=local
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
+
 #configure max files size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
