--- a/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
+++ b/backend/springboot microservices/interaction-microservice/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
 springdoc.api-docs.path=/api-docs
+spring.kafka.bootstrap-servers=localhost:9092
